<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".dKeutamaanHaji">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
   <TextView
       android:id="@+id/kh1"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/rukun_islam_yang_kelima"
       android:textStyle="bold"
       android:layout_marginTop="20dp"/>
    <TextView
        android:id="@+id/ayat1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ayat1"
        android:layout_below="@id/kh1"
        android:textSize="13sp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"/>
    <TextView
        android:id="@+id/hadist1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ayat1"
        android:textSize="13sp"
        android:text="@string/hadist1"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"/>
    <TextView
        android:id="@+id/kh2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_2_mendapatkan_surga"
        android:layout_below="@id/hadist1"
        android:textStyle="bold"
        android:layout_marginTop="7dp"/>
    <TextView
        android:id="@+id/hadist2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hadsit2"
        android:layout_below="@id/kh2"
        android:textSize="13sp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"/>
    <TextView
        android:id="@+id/kh3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/hadist2"
        android:text="@string/menghilangkan_dosa_dan_kemiskinan"
        android:textStyle="bold"
        android:layout_marginTop="7dp"/>

    <TextView
        android:id="@+id/hadist3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hadist3"
        android:layout_below="@id/kh3"
        android:textSize="13sp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"/>
    <TextView
        android:id="@+id/kh4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/hadist3"
        android:text="@string/haji_merupakan_jihad_bagi_wanita"
        android:textStyle="bold"
        android:layout_marginTop="7dp"/>
    <TextView
        android:id="@+id/hadist4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/kh4"
        android:text="@string/hadist4"
        android:textSize="13sp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"/>
    <TextView
        android:id="@+id/hadist5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/hadist4"
        android:text="@string/hadist5"
        android:layout_marginStart="20dp"
        android:textSize="13sp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"/>
    <TextView
        android:id="@+id/kh5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/hadist5"
        android:text="@string/bagi_laki_laki_haji_mabrur_merupakan_amalan_terbaik_setelah_jihad"
        android:textStyle="bold"
        android:layout_marginTop="7dp"/>
    <TextView
        android:id="@+id/hadist6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/kh5"
        android:text="@string/hadist6"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"/>
    <TextView
        android:id="@+id/kh6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/hadist6"
        android:text="@string/_6_menghapus_seluruh_dosa"
        android:textStyle="bold"
        android:layout_marginTop="7dp"/>
    <TextView
        android:id="@+id/hadist7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/kh6"
        android:textSize="13sp"
        android:text="@string/hadist7"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"/>
    <TextView
        android:id="@+id/kh7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/hadist7"
        android:text="@string/pahala_berlimpah_ruah"
        android:textStyle="bold"
        android:layout_marginTop="7dp"/>
    <TextView
        android:id="@+id/hadist8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/kh7"
        android:text="@string/hadist8"
        android:layout_marginStart="20dp"
        android:textSize="13sp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"/>


</RelativeLayout>


</ScrollView>

