<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".dHakikatTalbiyah">

    <TextView
        android:id="@+id/ht1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hakikat_talbiyah"
        android:textStyle="bold"
        android:layout_marginTop="20dp"/>
    <TextView
        android:id="@+id/hadist29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ht1"
        android:text="@string/hadist29"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:textSize="13sp"
        android:layout_marginTop="5dp"/>
    <TextView
        android:id="@+id/hadist30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/hadist29"
        android:text="@string/hadist30"
        android:textSize="13sp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"/>
    <TextView
    android:id="@+id/hadist31"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/hadist30"
    android:text="@string/hadist31"
    android:layout_marginStart="20dp"
    android:layout_marginLeft="20dp"
        android:textSize="13sp"
    android:layout_marginTop="5dp"/>
    <TextView
        android:id="@+id/hadist25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/hadist31"
        android:text="@string/hadist25"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:textSize="13sp"
        android:layout_marginTop="5dp"/>
    <TextView
        android:id="@+id/hadist26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/hadist25"
        android:text="@string/hadist26"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:textSize="13sp"
        android:layout_marginTop="5dp"/>

</RelativeLayout>