<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".dJamaahHajiTamuAllah">

        <TextView
            android:id="@+id/jmha1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jmha"
            android:textStyle="bold"
            android:layout_marginTop="20dp"/>
        <TextView
            android:id="@+id/ayat2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/jmha1"
            android:textSize="13sp"
            android:text="@string/ayat2"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"/>
        <TextView
            android:id="@+id/hadist9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ayat2"
            android:textSize="13sp"
            android:text="@string/hadist9"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"/>
        <TextView
            android:id="@+id/hadist10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/hadist9"
            android:text="@string/hr_bukhari_no_1593"
            android:textSize="13sp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"/>
        <TextView
                android:id="@+id/hadist34"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
                android:layout_below="@id/hadist10"
                android:text="@string/hadist34"
            android:textSize="13sp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"/>

</RelativeLayout>