<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".dBersabar">

    <TextView
        android:id="@+id/bersabar1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bersabar"
        android:textStyle="bold"
        android:layout_marginTop="20dp"/>
    <TextView
        android:id="@+id/hadist12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bersabar1"
        android:text="@string/hadsit12"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:textSize="14sp"
        android:layout_marginTop="5dp"/>
    <TextView
        android:id="@+id/hadist13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/hadist12"
        android:text="@string/hadist13"
        android:layout_marginStart="20dp"
        android:textSize="14sp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"/>


</RelativeLayout>
