<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".dIklasdalamhaji">

    <TextView
        android:id="@+id/idh1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ikhlas_dalam_haji"
        android:textStyle="bold"
        android:layout_marginTop="20dp"/>
    <TextView
        android:id="@+id/hadist14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/idh1"
        android:textSize="13sp"
        android:text="@string/hadist14"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"/>
    <TextView
        android:id="@+id/hadist15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/hadist14"
        android:textSize="13sp"
        android:text="@string/hadist15"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"/>

</RelativeLayout>