<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".dJanganBerdebat">

    <TextView
        android:id="@+id/jd1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jangan_berdebat"
        android:textStyle="bold"
        android:layout_marginTop="20dp"/>
    <TextView
        android:id="@+id/ayat3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ayat3"
        android:layout_below="@id/jd1"
        android:textSize="13sp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"/>
    <TextView
        android:id="@+id/hadist20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ayat3"
        android:textSize="13sp"
        android:text="@string/as_sa_di_tafsir_al_kariim_ar_rahmaan_hal_92"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"/>

</RelativeLayout>